# ara-diag-monitor

./: CMakeLists.txt  README.md
doc/: SDD.md  Use Case Diagram.md  analyse.md  manual.md  Сlass Diagram.md  Сomponent Diagram.md
include/: diag_error_domain.cpp  diag_error_domain.h  event.h
poc/: poc.md
src/: monitor.cpp  monitor.h
tests/: monitor_integration_test.cpp  monitor_mock_test.cpp  monitor_unit_test.cpp
